# RealDetect

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  readme.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/: realdetect.conf  seisproc.conf  stations.txt  stations_korea.txt  velocity_model.txt
config/velocity_models/: alaska.vel  cascadia.vel  hawaii.vel  iasp91.vel  japan.vel  korea.vel  mediterranean.vel  nocal.vel  socal.vel  velocity_models.conf
data/dprk/: picks_python.csv  stations.txt  waveforms.mseed
data/ridgecrest/: stations.txt  waveforms.mseed
data/test/: stations.txt  waveforms.mseed
docker/: build.sh  cross.sh  dev.sh  entrypoint-dev.sh  run.sh  test.sh
gui/: requirements.txt  server.py
gui/static/: app.js  style.css
gui/templates/: index.html
include/eigen3/Eigen/: Dense
include/realdetect/associator/: phase_associator.hpp
include/realdetect/core/: config.hpp  event.hpp  miniseed.hpp  regional_velocity_model.hpp  station.hpp  types.hpp  velocity_model.hpp  waveform.hpp
include/realdetect/database/: css30_database.hpp  css30_schema.hpp
include/realdetect/locator/: geiger.hpp  grid_search.hpp  locator.hpp
include/realdetect/magnitude/: local_magnitude.hpp  magnitude.hpp  moment_magnitude.hpp
include/realdetect/picker/: aic_picker.hpp  characteristic_function.hpp  filter_bank.hpp  ml_picker.hpp  picker.hpp  polarization_picker.hpp  stalta_picker.hpp
include/realdetect/seedlink/: seedlink_client.hpp
include/seisproc/associator/: phase_associator.hpp
include/seisproc/core/: config.hpp  event.hpp  miniseed.hpp  regional_velocity_model.hpp  station.hpp  types.hpp  velocity_model.hpp  waveform.hpp
include/seisproc/database/: css30_database.hpp  css30_schema.hpp
include/seisproc/locator/: geiger.hpp  grid_search.hpp  locator.hpp
include/seisproc/magnitude/: local_magnitude.hpp  magnitude.hpp  moment_magnitude.hpp
include/seisproc/picker/: aic_picker.hpp  characteristic_function.hpp  filter_bank.hpp  picker.hpp  stalta_picker.hpp
include/seisproc/seedlink/: seedlink_client.hpp
output/dprk/: arrivals.csv  picks.csv  stalta.csv  stations.csv  summary.csv  velocity_model.csv  waveforms.csv
output/ensemble_dprk/: comparison.csv
output/ensemble_ridgecrest/: comparison.csv
output/ridgecrest/: arrivals.csv  picks.csv  stalta.csv  stations.csv  summary.csv  velocity_model.csv  waveforms.csv
scripts/: fetch_dprk_data.py  fetch_ridgecrest_data.py  fetch_test_data.py  pick_dprk.py  plot_dprk.py  plot_ensemble.py  plot_ridgecrest.py
src/: main.cpp  simulator.cpp
src/associator/: event_builder.cpp  phase_associator.cpp  travel_time.cpp
src/core/: config.cpp  event.cpp  miniseed.cpp  regional_velocity_model.cpp  station.cpp  velocity_model.cpp  waveform.cpp
src/database/: css30_database.cpp
src/examples/: dprk_nuclear_test.cpp  ensemble_dprk.cpp  ensemble_ridgecrest.cpp  ridgecrest_earthquake.cpp
src/locator/: geiger.cpp  grid_search.cpp  ray_tracer.cpp  velocity_model_1d.cpp
src/magnitude/: local_magnitude.cpp  moment_magnitude.cpp  spectral_analysis.cpp
src/picker/: aic_picker.cpp  characteristic_function.cpp  filter_bank.cpp  ml_picker.cpp  polarization_picker.cpp  stalta_picker.cpp
src/seedlink/: packet_parser.cpp  seedlink_client.cpp  stream_buffer.cpp
tests/: test_associator.cpp  test_benchmark.cpp  test_core.cpp  test_database.cpp  test_framework.hpp  test_integration.cpp  test_locator.cpp  test_magnitude.cpp  test_main.cpp  test_miniseed.cpp  test_picker.cpp  test_regional_velocity.cpp
